--- a/style.css
+++ b/style.css
@@ -2,50 +2,43 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/*A custom sans-serif Google Font for use in heading tags (<h# />)
+A specified standard sans-serif web font for sales data (such as Arial, Verdana, or Helvetica).
+A specified standard serif web font for text (such as Georgia, Times).
+Specified different font colors for all three font uses.
+-A background color for the default page background (make sure font colors have good contrast and are readable on this background).
+-A different background color for elements such boxes and tables (so make sure the font colors contrast against this well, too!).
+-Anything else you’d like to add related to style. But remember: simplicity, clarity, and consistency are good things in design.
+Be thoughtful about layout and overall organization of the page.
+Run a Lighthouse Accessibility report. In this module, push to achieve a score between 65-80. Add the screenshot of your score to your README.md.
+Include all of the typical stuff that you’ll find on the home page of a business: locations, hours, contact information, some text about how awesome the business is, etc. Be creative, and again, think about what is meaningful to a typical end user.*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 body {
 	line-height: 1;
+	font: Verdana;
+	color: black;
+	background-color: #edddde;
+	
 }
 ol, ul {
-	list-style: none;
+	list-style:circle;
+	font: Verdana; 
 }
 blockquote, q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-h1 {
+h2 {
+font: sans-serif;
+color:brown;
+}
+h1{
+	text-align: center;
+}
+p {
 font: sans-serif;
 }
