--- a/style.css
+++ b/style.css
@@ -186,3 +186,19 @@ a:visited {
 a:hover {
     color: #ff91a4;
 }
+form {
+box-sizing: border-box;
+padding: 2rem;
+border: radius 1rem;
+border: 4px solid #E89248;
+display: grid;
+background-color:#ff91a4;
+}
+#newLocation{
+    background-color: #851e52;
+  border: none;
+  color: white;
+  padding: 10px 25px;
+  margin-top: 5%;
+  margin-left: 0%;
+}
